--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ month|title }} Challenge</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block page_title %}
+    {{ month|title }} Challenge
+{% endblock %}
+
+{% block page_content %}
+    {% include "challenges/includes/header.html" %}
+
     <h1>{{ month|title }} Challenge</h1>
 
     {% if text is not None %}
@@ -12,5 +14,4 @@
     {% else %}
         <p>There is no challenge for this month yet!</p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
