--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>All Challenges</title>
-</head>
-<body>
-    <ul>
+{% extends "base.html" %}
+
+{% block page_title %}
+	All Challenges
+{% endblock %}
+
+{% block page_content %}
+    {% include "challenges/includes/header.html" %}
+
+	<ul>
         {% for month in months %}
             <li>
                 <a href="{% url 'month_challenge' month %}">{{ month|title }}</a>
             </li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
