--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block page_title %}
     {{ month|title }} Challenge
+{% endblock %}
+
+{% block css_files %}
+	<link rel="stylesheet" href="{% static "challenges/includes/header.css" %}">
+	<link rel="stylesheet" href="{% static "challenges/challenge.css" %}">
 {% endblock %}
 
 {% block page_content %}
@@ -12,6 +18,6 @@
     {% if text is not None %}
         <h2>{{ text }}</h2>
     {% else %}
-        <p>There is no challenge for this month yet!</p>
+        <p class="fallback">There is no challenge for this month yet!</p>
     {% endif %}
 {% endblock %}
