--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block page_title %}
 	All Challenges
+{% endblock %}
+
+{% block css_files %}
+	<link rel="stylesheet" href="{% static "challenges/includes/header.css" %}">
+	<link rel="stylesheet" href="{% static "challenges/index.css" %}">
 {% endblock %}
 
 {% block page_content %}
