--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block page_title %}My Challenge{% endblock %}</title>
+    <link rel="stylesheet" href="{% static "styles.css" %}">
+    {% block css_files %}{% endblock %}
 </head>
 <body>
     {% block page_content %}{% endblock %}
